Fixed: Project Layout (Responsif and Scrollbar)

--- a/style.css
+++ b/style.css
@@ -360,18 +360,32 @@ article.icon {
 .project-level {
   padding: 1rem;
 }
+
+.project-wrapper {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  overflow: hidden;
+}
+
 .project-container {
   padding: 1rem;
   display: flex;
-  gap: 2rem;
+  gap: 1rem;
   margin-bottom: 2rem;
   margin-top: 2rem;
   flex-wrap: nowrap;
   overflow-x: auto;
+  justify-content: flex-start;
+  max-width: 1200px;
+  scroll-behavior: smooth;
+  padding-bottom: 1rem;
 }
+
 .project-container::-webkit-scrollbar {
   display: none;
 }
+
 .project-details-container {
   flex-shrink: 0;
   flex: 0 0 12rem;
@@ -382,6 +396,8 @@ article.icon {
   border: rgb(53, 53, 53) 0.1rem solid;
   border-color: rgb(163, 163, 163);
   text-align: center;
+  align-items: center;
+  min-width: 200px;
 }
 
 .project-article-container {
